# src/app/api-services-v2/model/models.ts
@@ -19,7 +19,6 @@ export * from './pagedOrderResponseDTO';
 export * from './pagedOrderResponseDTOPageable';
 export * from './personRequestDTO';
 export * from './personResponseDTO';
-export * from './preferenceType';
 export * from './quotationRequestDTO';
 export * from './quotationResponseDTO';
 export * from './sort';
