# src/app/api-services-v2/model/userPreferencesRequestDTO.ts
@@ -7,14 +7,10 @@
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
-import { PreferenceType } from './preferenceType';
 
 
 export interface UserPreferencesRequestDTO { 
-    preference_type: PreferenceType;
+    preference_type: string;
     preferences: { [key: string]: any; };
 }
-export namespace UserPreferencesRequestDTO {
-}
-
 
